--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,7 +95,11 @@ def enableProguardInReleaseBuilds = false
 
 Properties properties = new Properties()
 
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def hasLocalPropertiesFile = project.rootProject.file('local.properties').exists();
+
+if(hasLocalPropertiesFile) {
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+}
 
 def envXtestReleaseStoreFilename = System.getenv()['XTEST_RELEASE_STORE_FILENAME'] ? System.getenv()['XTEST_RELEASE_STORE_FILENAME'] : System.getenv()['$BITRISEIO_ANDROID_KEYSTORE_URL']
 def envXtestReleaseStorePassword = System.getenv()['XTEST_RELEASE_STORE_PASSWORD'] ? System.getenv()['XTEST_RELEASE_STORE_PASSWORD'] : System.getenv()['$BITRISEIO_ANDROID_KEYSTORE_PASSWORD']
