add test log in build gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,6 +109,10 @@ def xtestReleaseStorePassword = envXtestReleaseStorePassword ? envXtestReleaseSt
 def xtestReleaseStoreAlias = envXtestReleaseStoreAlias ? envXtestReleaseStoreAlias : properties.getProperty('ext.XTEST_RELEASE_KEY_ALIAS')
 def xtestReleaseKeyPassword = envXtestReleaseKeyPassword ? envXtestReleaseKeyPassword : properties.getProperty('ext.XTEST_RELEASE_KEY_PASSWORD')
 
+println '>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>'
+println xtestReleaseStoreFilename + 'rr'
+println '>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>'
+
 switch (true) {
     case (null == xtestReleaseStoreFilename):
         throw new GradleException('Required XTEST_RELEASE_STORE_FILENAME environment variable not set.')
