--- a/ios/xtest.xcodeproj/xcshareddata/xcschemes/xtest.xcscheme
+++ b/ios/xtest.xcodeproj/xcshareddata/xcschemes/xtest.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "xtest.app"
-               BlueprintName = "xtest"
-               ReferencedContainer = "container:xtest.xcodeproj">
+               BuildableName = "ytest.app"
+               BlueprintName = "ytest"
+               ReferencedContainer = "container:ytest.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "xtestTests.xctest"
-               BlueprintName = "xtestTests"
-               ReferencedContainer = "container:xtest.xcodeproj">
+               BuildableName = "ytestTests.xctest"
+               BlueprintName = "ytestTests"
+               ReferencedContainer = "container:ytest.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "xtestTests.xctest"
-               BlueprintName = "xtestTests"
-               ReferencedContainer = "container:xtest.xcodeproj">
+               BuildableName = "ytestTests.xctest"
+               BlueprintName = "ytestTests"
+               ReferencedContainer = "container:ytest.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "xtest.app"
-            BlueprintName = "xtest"
-            ReferencedContainer = "container:xtest.xcodeproj">
+            BuildableName = "ytest.app"
+            BlueprintName = "ytest"
+            ReferencedContainer = "container:ytest.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "xtest.app"
-            BlueprintName = "xtest"
-            ReferencedContainer = "container:xtest.xcodeproj">
+            BuildableName = "ytest.app"
+            BlueprintName = "ytest"
+            ReferencedContainer = "container:ytest.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "xtest.app"
-            BlueprintName = "xtest"
-            ReferencedContainer = "container:xtest.xcodeproj">
+            BuildableName = "ytest.app"
+            BlueprintName = "ytest"
+            ReferencedContainer = "container:ytest.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
