update background to red

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "android": "react-native run-android --variant=productionDebug",
+    "android": "react-native run-android",
     "android:generate-keystore-file": "node ./build_scripts/android_generate_new_keystore_file.js",
     "android:prod": "cd android && ./gradlew assembleRelease",
     "android:tests": "react-native run-android --variant=automatedTestsDebug",
