--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
+import groovy.json.JsonSlurper
 
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
@@ -128,6 +129,13 @@ switch (true) {
 
 def resolvedVersionCode = System.getenv()['BITRISE_BUILD_NUMBER'] ? System.getenv()['BITRISE_BUILD_NUMBER'].toInteger() : 1
 
+def packageSlurper = new JsonSlurper()
+def packageJson = packageSlurper.parse file('package.json')
+def packageJsonVersion = packageJson.version
+
+println '>>>>>>>>>>>>>>>>>>>>>>>'
+println packageJsonVersion
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -137,7 +145,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode resolvedVersionCode
-        versionName "1.0"
+        versionName packageJsonVersion
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
