--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "android:deploy": "cd android && fastlane android deploy && cd ..",
     "ios:beta": "cd ios && fastlane ios beta && cd ..",
     "ios:deploy": "cd ios && fastlane ios deploy && cd ..",
+    "android:test": "mocha tests",
     "test": "jest"
   },
   "dependencies": {
@@ -19,10 +20,14 @@
     "react-native": "0.57.8"
   },
   "devDependencies": {
+    "appium": "^1.10.1",
+    "appium-doctor": "^1.8.0",
     "babel-jest": "23.6.0",
+    "chai": "^4.2.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3"
+    "mocha": "^5.2.0",
+    "webdriverio": "^5.4.8"
   },
   "jest": {
     "preset": "react-native"
