--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.11.0",
     "react": "16.6.3",
-    "react-native": "0.57.8"
+    "react-native": "0.57.8",
+    "react-native-gesture-handler": "^1.0.15",
+    "react-navigation": "^3.0.9",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@wdio/sauce-service": "^5.4.8",
