--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "android:beta": "cd android && fastlane android beta && cd ..",
     "android:test": "mocha tests --android",
     "android:deploy": "cd android && fastlane android deploy && cd ..",
+    "ios": "react-native run-ios",
     "ios:beta": "cd ios && fastlane ios beta && cd ..",
     "ios:prod": "cd ios && fastlane ios deploy && cd ..",
     "ios:test": "mocha tests --ios",
     "ios:deploy": "cd ios && fastlane ios deploy && cd ..",
-    
-    "test": "jest"
+    "test": "jest",
+    "detox:build": "detox build",
+    "detox:ios": "detox test"
   },
   "dependencies": {
     "native-base": "^2.11.0",
@@ -27,12 +29,14 @@
     "redux": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@wdio/sauce-service": "^5.4.8",
     "appium": "^1.10.1",
     "appium-doctor": "^1.8.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "24.1.0",
     "chai": "^4.2.0",
-    "jest": "23.6.0",
+    "detox": "^10.0.12",
+    "jest": "^24.1.0",
     "metro-react-native-babel-preset": "0.51.1",
     "mocha": "^5.2.0",
     "webdriverio": "^5.4.8"
@@ -43,5 +47,16 @@
   "bundledDependencies": [
     "react",
     "react-native"
-  ]
+  ],
+  "detox": {
+    "configurations": {
+      "ios.sim.debug": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/ytest.app",
+        "build": "xcodebuild -project ios/ytest.xcodeproj -scheme ytest -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone X"
+      }
+    },
+    "test-runner": "jest"
+  }
 }
