--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "ios:deploy": "cd ios && fastlane ios deploy && cd ..",
     "test": "jest",
     "detox:build": "detox build",
-    "detox:ios": "detox test --take-screenshots --cleanup  --record-logs all"
+    "detox:ios": "detox test --take-screenshots --cleanup  --record-logs all",
+    "ci:detox:build": "detox build --configuration ios.sim.release ",
+    "ci:detox:ios": "detox test --take-screenshots --cleanup  --record-logs all --configuration ios.sim.release"
   },
   "dependencies": {
     "native-base": "^2.11.0",
@@ -53,6 +55,12 @@
       "ios.sim.debug": {
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/ytest.app",
         "build": "xcodebuild -project ios/ytest.xcodeproj -scheme ytest -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone X"
+      },
+      "ios.sim.release": {
+        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/ytest.app",
+        "build": "xcodebuild -project ios/ytest.xcodeproj -scheme ytest -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "name": "iPhone X"
       }
