--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,4 +2,7 @@ rootProject.name = 'ytest'
 include ':react-native-gesture-handler'
 project(':react-native-gesture-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gesture-handler/android')
 
+include ':detox'
+project(':detox').projectDir = new File(rootProject.projectDir, '../node_modules/detox/android/detox')
+
 include ':app'
