--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "ios:test": "mocha tests --ios",
     "ios:deploy": "cd ios && fastlane ios deploy && cd ..",
     "test": "jest",
-    "detox:build": "detox build",
-    "detox:ios": "detox test --take-screenshots --cleanup  --record-logs all",
-    "ci:detox:build": "detox build --configuration ios.sim.release ",
-    "ci:detox:ios": "detox test --take-screenshots --cleanup  --record-logs all --configuration ios.sim.release"
+    "detox:ios:debug:build": "detox build  --configuration ios.sim.debug",
+    "detox:ios:debug:test": "detox test --take-screenshots --configuration ios.sim.debug --artifacts-location ./artifacts/ios",
+    "detox:android:debug:build": "detox build  --configuration android.emu.debug",
+    "detox:android:debug:test": "detox test --take-screenshots --configuration android.emu.debug --artifacts-location ./artifacts/android",
+    "ci:detox:android:build": "detox build --configuration android.emu.release",
+    "ci:detox:android:test": "detox test --take-screenshots --cleanup  --record-logs all --configuration android.emu.release --artifacts-location ./artifacts/android",
+    "ci:detox:ios:build": "detox build --configuration ios.sim.release",
+    "ci:detox:ios:test": "detox test --take-screenshots --cleanup  --record-logs all --configuration ios.sim.release --artifacts-location ./artifacts/ios"
   },
   "dependencies": {
     "native-base": "^2.11.0",
@@ -63,6 +67,18 @@
         "build": "xcodebuild -project ios/ytest.xcodeproj -scheme ytest -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "name": "iPhone X"
+      },
+      "android.emu.debug": {
+        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+        "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
+        "type": "android.emulator",
+        "name": "Nexus_5X_API_28_x86"
+      },
+      "android.emu.release": {
+        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+        "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
+        "type": "android.emulator",
+        "name": "Nexus_5X_API_28_x86"
       }
     },
     "test-runner": "jest"
